[build-system]
requires = [
    "setuptools",
    "setuptools-git-versioning>=2.0,<3",
]
# Use an in-tree build backend, to customise the wheels we generate
build-backend = "backend"
backend-path = [
    "ci/_custom_build",
]

[project]
name = "pgrayy-wasmtime"
dynamic = [
    "version",
]
description = "A WebAssembly runtime powered by Wasmtime"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
authors = [
    {name="The Wasmtime Project Developers", email="hello@bytecodealliance.org"},
]
requires-python=">=3.9"
dependencies = [
]
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.optional-dependencies]
testing = [
    "coverage",
    "pycparser",
    "pytest-mypy",
    "pytest",
]

[project.urls]
"Homepage" = "https://github.com/bytecodealliance/wasmtime-py"
"Bug Tracker" = "https://github.com/bytecodealliance/wasmtime-py/issues"
"Documentation" = "https://bytecodealliance.github.io/wasmtime-py/"
"Source Code" = "https://github.com/bytecodealliance/wasmtime-py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "wasmtime",
    "wasmtime.*",
]

[tool.setuptools.package-data]
# NB Coordinate changes here with .gitignore
"wasmtime" = [
    # Wasmtime shared library. Downloaded by ci/download-wasmtime.py
    "*-*/*.dll",
    "*-*/*.dylib",
    "*-*/*.so",
    "py.typed",
]

[tool.setuptools-git-versioning]
# https://setuptools-git-versioning.readthedocs.io/en/stable/options/index.html
enabled = false
version_file = "VERSION"
